--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,5 +9,10 @@ spring:
     pathmatch:
       matching-strategy: ant_path_matcher
 
+  jpa:
+    properties:
+      hibernate:
+        show_sql: true
+
 server:
   port: 8001
