--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,4 +31,4 @@ jobs:
       with:
         arguments: build
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew    
+      run: chmod +x ./gradlew
