--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,3 +32,7 @@ jobs:
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build
+    - name: set databases.properties
+      env:
+        DATABASE.USERNAME: ${{ secrets.DATABASE_USERNAME }}
+        DATABASE.PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
