--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,3 +36,6 @@ jobs:
       env:
         DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
         DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+      run: |
+        echo "DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}"
+        echo "DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}"
