--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,3 +39,10 @@ jobs:
       run: |
         echo "DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}"
         echo "DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}"
+    - name: Start MySQL
+      uses: samin/mysql-action@v1.3
+      with:
+        character set server: 'utf8'
+        mysql database: 'deal'
+        mysql user: ${{ secrets.DATABASE_USERNAME }}
+        mysql password: ${{ secrets.DATABASE_PASSWORD }}
