--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/deal
+    url: jdbc:mysql://localhost/deal
     username: ${DATABASE_USERNAME}
     password: ${DATABASE_PASSWORD}
-  # swagger
-  mvc:
-    pathmatch:
-      matching-strategy: ant_path_matcher
 
-  jpa:
-    properties:
-      hibernate:
-        show_sql: true
-        
 server:
   port: 8001
