--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,10 @@
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/deal
-    username: ${database.username}
-    password: ${database.password}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
   # swagger
   mvc:
     pathmatch:
@@ -13,6 +14,6 @@ spring:
     properties:
       hibernate:
         show_sql: true
-
+    database: mysql
 server:
   port: 8001
