--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -52,16 +52,12 @@ jobs:
            
     - name: set properties 
       run: |
-        cd ./src/main/resources
+        cd ./src/test/resources
+        touch ./application.yml
+        echo "${{ secrets.APPLICATION_PROPERTIES }}" >> ./application.yml
         touch ./database.properties
         echo "DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }}" >> ./database.properties
         echo "DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}" >> ./database.properties
-        cp application.yml application.yml2
-        cp database.properties database.properties2
-        cd ../../..
-        mkdir ./src/test/resources
-        mv ./src/main/resources/application.yml2 ./src/test/resources/application.yml
-        mv ./src/main/resources/database.properties2 ./src/test/resources/database.properties
       shell: bash
       
     - name: Build with Gradle 
