--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,12 +14,20 @@ on:
   pull_request:
     branches: [ "main" ]
 
-permissions: write-all
+permissions:
+  contents: read
 
 jobs:
   build_test:
     runs-on: ubuntu-latest
-
+    container: openjdk:11
+    services:
+      mysql:
+        image: mysql:latest
+        env:
+          MYSQL_DATABASE: deal
+          MYSQL_ROOT_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+          
     steps:
     - uses: actions/checkout@v3
     
@@ -28,14 +36,6 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'     
-        
-    - name: Set up MySQL
-      uses: samin/mysql-action@v1
-      with:
-        character set server: 'utf8'
-        mysql database: 'deal'
-        mysql user: ${{ secrets.DATABASE_USERNAME }}
-        mysql password: ${{ secrets.DATABASE_PASSWORD }}
         
     - name: Gradle Caching
       uses: actions/cache@v3
@@ -57,14 +57,9 @@ jobs:
       
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew   
-      
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-      with:
-        arguments: build
-  
+    
     - name: Build with Gradle 
-      run: ./gradlew build
+      run: ./gradlew build -x test
       
     - name: Test with Gradle
       run: ./gradlew test
