--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+  # Redis
+  redis:
+    host: localhost
+    port: 6379
 
   jpa:
     properties:
