--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,7 +26,16 @@ jobs:
         env:
           MYSQL_DATABASE: deal
           MYSQL_ROOT_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
-          
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
+          -
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
