--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -63,7 +63,16 @@ jobs:
         mysql database: deal
         mysql user: ${{ secrets.DATABASE_USERNAME }}
         mysql password: ${{ secrets.DATABASE_PASSWORD }}  
-           
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Connect to Redis
+      run: node client.js
+      env:
+        REDIS_HOST: localhost
+        REDIS_PORT: 6379
+
     - name: set properties 
       run: |
         cd ./src/main/resources
