--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/deal
+    url: jdbc:mysql://localhost:3306/deal?useSSL=true&serverTimezone=UTC
     username: ${DATABASE_USERNAME}
     password: ${DATABASE_PASSWORD}
   # swagger
@@ -18,6 +18,8 @@ spring:
     properties:
       hibernate:
         show_sql: true
+    hibernate:
+      ddl-auto: update
     database: mysql
 
 server:
