--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -66,6 +66,9 @@ jobs:
       uses: supercharge/redis-github-action@1.5.0
       with:
         redis-version: 'latest'
+      env:
+        REDIS_HOST: localhost
+        REDIS_PORT: 6379
 
     - name: set properties 
       run: |
