--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,20 +19,6 @@ permissions:
 jobs:
   build_test:
     runs-on: ubuntu-latest
-    container: openjdk:11
-    services:
-      mysql:
-        image: mysql:latest
-        env:
-          MYSQL_DATABASE: deal
-          MYSQL_ROOT_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
-      redis:
-        image: redis:latest
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
 
     steps:
       - uses: actions/checkout@v3
@@ -51,7 +37,19 @@ jobs:
             ~/.gradle/wrapper
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
-            ${{ runner.os }}-gradle-            
+            ${{ runner.os }}-gradle-   
+
+      - name: Start MySQL
+        uses: samin/mysql-action@v1
+        with:
+          mysql database: deal
+          mysql user: ${{ secrets.DATABASE_USERNAME }}
+          mysql password: ${{ secrets.DATABASE_PASSWORD }}
+
+      - name: Start Redis
+        uses: supercharge/redis-github-action@1.5.0
+        with:
+          redis-version: 'latest'
 
       - name: set properties
         run: |
