--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,7 +33,7 @@ jobs:
           --health-timeout=5s
           --health-retries=3
         ports:
-          - 3306
+          - localhost:3306
 
       redis:
         image: redis:latest
@@ -43,7 +43,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
         ports:
-          - 6379/tcp
+          - localhost:6379
 
     steps:
       - uses: actions/checkout@v3
@@ -66,21 +66,6 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
-
-      - name: Start MySQL
-        uses: samin/mysql-action@v1
-        with:
-          mysql database: deal
-          mysql user: ${{ secrets.DATABASE_USERNAME }}
-          mysql password: ${{ secrets.DATABASE_PASSWORD }}
-
-      - name: Start Redis
-        uses: supercharge/redis-github-action@1.5.0
-        with:
-          redis-version: 'latest'
-        env:
-          REDIS_HOST: localhost
-          REDIS_PORT: 6379
 
       - name: set properties
         run: |
