--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,3 +1,4 @@
+
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
@@ -20,30 +21,14 @@ jobs:
   build_test:
     runs-on: ubuntu-latest
     container: openjdk:11
-
     services:
       mysql:
         image: mysql:latest
         env:
           MYSQL_DATABASE: deal
           MYSQL_ROOT_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
-        options: >-
-          --health-cmd="mysqladmin ping"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
-        ports:
-          - 3306:3306
-
       redis:
-        image: redis:latest
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 6379:6379
+        image: redis
 
     steps:
       - uses: actions/checkout@v3
@@ -62,10 +47,7 @@ jobs:
             ~/.gradle/wrapper
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
-            ${{ runner.os }}-gradle-    
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
+            ${{ runner.os }}-gradle-            
 
       - name: set properties
         run: |
@@ -114,4 +96,3 @@ jobs:
           script: |
             sh /home/script/stop.sh
             sh /home/script/run.sh
-
