--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,6 +29,9 @@ jobs:
           MYSQL_ROOT_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
       redis:
         image: redis
+        env:
+          REDIS_HOST: localhost
+          REDIS_PORT: 6379
 
     steps:
       - uses: actions/checkout@v3
