--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -14,6 +14,13 @@ spring:
     host: localhost
     port: 6379
 
+  h2:
+    console:
+      enabled: true
+      path: /h2
+      settings:
+        web-allow-others: true
+
   jpa:
     properties:
       hibernate:
