--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,15 +1,15 @@
-
 spring:
-  profiles:
-    default: local
+  config:
+    activate:
+      on-profile: prod
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/deal?useSSL=true&serverTimezone=UTC
+    url: jdbc:mysql://mysql:3306/deal?useSSL=true&serverTimezone=UTC
     username: ${DATABASE_USERNAME}
     password: ${DATABASE_PASSWORD}
   # Redis
   redis:
-    host: localhost
+    host: myredis
     port: 6379
 
   # swagger
