--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,19 +1,18 @@
 spring:
   datasource:
-    hikari:
-      jdbc-url: jdbc:h2:./data/test;MODE=MYSQL
-      driver-class-name: org.h2.Driver
-      username: sa
-      initialization-mode: always
+    url: jdbc:h2:tcp://localhost/~/test;MODE=MYSQL
+    driver-class-name: org.h2.Driver
+    username: sa
+
   # Redis
   redis:
     host: redis
     port: 6379
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
         format_sql: true
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        #dialect: org.hibernate.dialect.MySQL8Dialect
