--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-   
 
+      - name: Start MySQL
+        uses: samin/mysql-action@v1
+        with:
+          mysql database: deal
+          mysql password: ${{ secrets.DATABASE_PASSWORD }}
+
       - name: Start Redis
         uses: supercharge/redis-github-action@1.5.0
         with:
