--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       initialization-mode: always
   # Redis
   redis:
-    host: localhost
+    host: redis
     port: 6379
   jpa:
     hibernate:
