--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,4 +48,4 @@ jobs:
         run: ./gradlew clean
 
       - name: test with Gradle
-        run: ./gradlew test
+        run: ./gradlew build test
