--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,16 +1,17 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/test;MODE=MYSQL
-    driver-class-name: org.h2.Driver
-    username: sa
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/deal?useSSL=true&serverTimezone=UTC
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
 
   # Redis
   redis:
-    host: redis
+    host: localhost
     port: 6379
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
