--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,5 +25,11 @@ spring:
       ddl-auto: update
     database: mysql
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, metrics, prometheus
+
 server:
   port: 8001
